--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prismjs": "1.29.0",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-chartjs-2": "5.2.0",
     "react-credit-cards": "0.8.3",
     "react-datepicker": "4.11.0",
@@ -69,12 +70,15 @@
     "react-hook-form": "7.43.9",
     "react-hot-toast": "2.4.1",
     "react-i18next": "12.2.2",
+    "react-multi-date-picker": "^4.3.1",
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
     "react-redux": "8.0.5",
     "recharts": "2.5.0",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
+    "sweetalert2": "^11.7.31",
+    "sweetalert2-react-content": "^5.0.7",
     "yup": "1.1.1"
   },
   "devDependencies": {
