--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:icons": "node src/iconify-bundle/bundle-icons-react.js"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.3.1",
     "@babel/core": "7.21.5",
     "@babel/eslint-parser": "7.21.3",
     "@casl/ability": "6.5.0",
@@ -37,6 +38,7 @@
     "@popperjs/core": "2.11.7",
     "@reduxjs/toolkit": "1.9.5",
     "apexcharts-clevision": "3.28.5",
+    "aws-amplify": "^5.3.11",
     "axios": "1.4.0",
     "axios-mock-adapter": "1.21.4",
     "babel-eslint": "10.1.0",
