--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "stylis-plugin-rtl": "2.1.1",
     "sweetalert2": "^11.7.31",
     "sweetalert2-react-content": "^5.0.7",
+    "yarn": "^1.22.19",
     "yup": "1.1.1"
   },
   "devDependencies": {
