--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-datepicker": "4.11.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "1.15.0",
-    "react-dropzone": "14.2.3",
+    "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
     "react-hook-form": "7.43.9",
     "react-hot-toast": "2.4.1",
@@ -84,6 +84,7 @@
     "stylis-plugin-rtl": "2.1.1",
     "sweetalert2": "^11.7.31",
     "sweetalert2-react-content": "^5.0.7",
+    "yarn": "^1.22.19",
     "yup": "1.1.1"
   },
   "devDependencies": {
