--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@fullcalendar/react": "6.1.6",
     "@fullcalendar/timegrid": "6.1.6",
     "@hookform/resolvers": "3.1.0",
-    "@iconify/react": "4.1.0",
     "@mui/lab": "5.0.0-alpha.128",
     "@mui/material": "5.12.2",
     "@mui/system": "5.12.1",
@@ -53,16 +52,16 @@
     "immutable": "^5.0.0-beta.4",
     "jsonwebtoken": "8.5.1",
     "keen-slider": "6.8.5",
-    "next": "13.3.2",
+    "next": "^13.3.2",
     "nprogress": "0.2.0",
     "payment": "2.4.6",
     "prismjs": "1.29.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-chartjs-2": "5.2.0",
     "react-credit-cards": "0.8.3",
     "react-datepicker": "4.11.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "1.15.0",
     "react-dropzone": "14.2.3",
     "react-hook-form": "7.43.9",
@@ -80,6 +79,7 @@
   "devDependencies": {
     "@iconify/iconify": "3.1.0",
     "@iconify/json": "2.2.58",
+    "@iconify/react": "^4.1.1",
     "@iconify/tools": "2.2.6",
     "@iconify/types": "2.0.0",
     "@iconify/utils": "2.1.5",
